[package]
name = "aoc19"
version = "0.1.0"
authors = ["hukumka <hukumka212@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reformation = {git = "https://github.com/hukumka/reformation"}
grid = {git = "https://github.com/hukumka/grid"}
rpds = "0.7"
itertools = "0.8"
bytecount = "0.6"

[profile.release]
debug = true
